# markdown-tool

./: Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
src/: convert.rs  main.rs
src/commands/: format.rs  mod.rs
src/commands/convert_to/: ast_json.rs  ast_yaml.rs  html.rs  latex.rs  markdown.rs  mod.rs
src/config/: html.rs  latex.rs  markdown.rs  mod.rs
src/input/: format.rs  mod.rs  reader.rs
tests/: integration.rs
tests/cli/: convert_to_ast.rs  convert_to_html.rs  convert_to_latex.rs  convert_to_markdown.rs  error_handling.rs  mod.rs
tests/fixtures/: edge_cases.md  sample.md
